problem1/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wisecow
  labels:
    name: wisecow
    app: wisecow
